--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -33,3 +33,21 @@ CVE-2018-1714 until=2022-06-30
 # pkg:github.com/containerd/containerd@v1.6.4
 # unused dependency of spf13 libraries
 CVE-2022-31030 until=2022-07-01
+
+# pkg:golang/github.com/kataras/iris/v12@v12.1.8
+# imported from:
+#  - github.com/getsentry/sentry-go@v0.13.0
+CVE-2021-23772 until=2022-08-01
+
+# pkg:golang/github.com/nats-io/jwt@v1.2.2
+# imported from:
+#  - github.com/go-kit/kit@v0.12.0
+CVE-2021-3127 until=2022-08-01
+
+# pkg:golang/helm.sh/helm/v3@v3.9.0
+CVE-2018-1714 until=2022-08-01
+
+# pkg:golang/github.com/mholt/archiver/v3@v3.5.0
+# imported from:
+#  - github.com/giantswarm/helmclient/v4
+sonatype-2022-0204 until=2022-08-01
