Fix security vulnerabilities, replace github.com/hashicorp/consul/api v1.12.0 -> v1.15.2

--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -5,6 +5,8 @@ CVE-2022-24687 until=2022-12-31
 # pkg:golang/github.com/hashicorp/consul/sdk@v0.8.0
 CVE-2022-29153 until=2022-12-31
 CVE-2022-24687 until=2022-12-31
+# The latest version - v0.11.0 - at the time has the same issue present
+CVE-2021-41803 until=2022-12-31
 
 # pkg:golang/github.com/kataras/iris/v12@v12.1.8
 # This is the latest release at the moment
